# UMT-pythonweb-hw-13

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_users_and_link_contacts.py  b2c3d4e5f6a7_add_role_to_user.py  f60ca8e17744_init_contacts.py
scripts/: seed.py  smoke.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_database_db_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_services_cache_unit.py  test_services_email_unit.py  test_services_upload_file_unit.py  test_users_repository_unit.py
