[project]
name = "homework-13"
version = "0.3.0"
description = "Final REST API: contacts manager with JWT access/refresh tokens, email verification, password reset, user roles, Redis caching, rate limiting, CORS, Cloudinary avatars, pytest test suite and Sphinx docs (FastAPI + SQLAlchemy + PostgreSQL + Redis + Alembic)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4.1",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.136.1",
    "fastapi-mail>=1.6.4",
    "httpx>=0.28.0",
    "libgravatar>=1.0.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "sphinx>=8.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    # Стороннє попередження Starlette про httpx у TestClient (UserWarning).
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
